// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the all failed scenario 1`] = `
{
  "content": "Failed to delete all 11 items.",
  "type": "error",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the all prevented overwrites scenario 1`] = `
{
  "content": "0 items deleted, 0 items failed to delete.",
  "type": "error",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the all success scenario 1`] = `
{
  "content": "All 11 items deleted successfully.",
  "type": "success",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the no failures, some prevented overwrites, some success scenario 1`] = `
{
  "content": "2 items deleted, 0 items failed to delete.",
  "type": "error",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the some failed scenario 1`] = `
{
  "content": "8 items deleted, 3 items failed to delete.",
  "type": "error",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the some failures, some prevented overwrites, no success scenario 1`] = `
{
  "content": "0 items deleted, 2 items failed to delete.",
  "type": "error",
}
`;

exports[`DeleteView display text values \`getActionCompleteMessage\` returns the expected values in the some failures, some prevented overwrites, some success scenario 1`] = `
{
  "content": "8 items deleted, 2 items failed to delete.",
  "type": "error",
}
`;

exports[`DeleteView display text values should match snapshot values 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Destination",
  "actionExitLabel": "Exit",
  "actionStartLabel": "Delete",
  "getActionCompleteMessage": [Function],
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayInProgressLabel": "In progress",
  "statusDisplayQueuedLabel": "Not started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnProgressHeader": "Progress",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Delete",
}
`;
